# api_ml_fastapi

./: Dockerfile  README.md  app.py  pyproject.toml  train_model.py
