[tool.poetry]
name = "api-ml-fastapi"
version = "0.1.0"
description = ""
authors = ["RArielAlonso <rariel.alonso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
